# nethack-agent

./: .gitignore  README.md  advisor_sets.py  advisors.py  aicrowd.json  character.py  constants.py  development.env  dump_glyphs.py  environment.py  excalibur.env  glyphs.py  good_roles.env  inventory.py  map.py  menuplan.py  n_gram.py  n_gram_2.py  neighborhood.py  new_advisors.py  nh_git.py  old_test_submission.py  parse_ttyrec.py  physics.py  play_seeded.py  pyproject.toml  replay_commit.py  requirements.txt  rollout.py  run.sh  submission_config.py  test_run.env  test_submission.py  tests.env  unit_tests.py  utilities.py  watch_recent.sh  wish.py  wizmode_prep.py
.github/workflows/: python-app.yml
advice/: advisor_sets.py  advisors.py  menuplan.py  wish.py
agents/: base.py  custom_agent.py  git.py
agents/advice/: advisor_sets.py  advisors.py  menuplan.py  preferences.py  wish.py
agents/representation/: character.py  constants.py  glyphs.py  inventory.py  map.py  monster_messages.py  neighborhood.py  threat.py
agents/wizmode/: wizmodeprep.py
environment_files/: development.env  test_run.env  unset_all.env  wizmode_valk.env
envs/: batched_env.py  wrappers.py
nethack_baselines/other_examples/: random_rollouts.py
notebooks/: ttyrec_parse_bulk_trained.ipynb  ttyrec_stats.ipynb
representation/: character.py  constants.py  glyphs.py  map.py  monster_messages.py  neighborhood.py
seeded_runs/: .~lock.seed_whitelist.csv#  3781606510239413095-8286170024939907219.csv  seed_whitelist.csv
spoilers/: corpses.csv  monsters.csv  monsters_csv_parsing.py  skill_spoiler.csv
spoilers/object_spoilers/: ARMOR_CLASS.csv  WAND_CLASS.csv  amulet_spoiler.csv  armor_spoiler.csv  artifact_spoiler.csv  ball_spoiler.csv  chain_spoiler.csv  coin_spoiler.csv  food_spoiler.csv  gem_spoiler.csv  potion_spoiler.csv  ring_spoiler.csv  rock_spoiler.csv  scroll_spoiler.csv  spellbook_spoiler.csv  tool_spoiler.csv  wand_spoiler.csv  weapon_spoiler.csv
spoilers/special_levels/: medusa_1.json  medusa_1.txt  medusa_2.txt  medusa_3.json  medusa_4.json  mines_end_catacomb.json  sokoban_1a.json  (+17 more)
utility/: watch_recent.sh
wizmode/: wizmodeprep.py
(+131 files in other folders)
